--- a/Destapa-Cañerias/Destapar-Cañerias.html
+++ b/Destapa-Cañerias/Destapar-Cañerias.html
@@ -142,27 +142,27 @@ Destapar Cañerias
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Harpic-destapacaños-instrucciones.html">Harpic destapacaños instrucciones </a> 
+       <a href="../Servicios/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Federal-Destapaciones.html">Federal Destapaciones </a> 
+       <a href="../Destapa-Cañerias/Hay-algun-consejo-para-Cantilde;erias-de-agua-tapadas.html">Hay algun consejo para Cañerias de agua tapadas </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapacañerias-ayudin-opiniones.html">Destapacañerias ayudin opiniones </a> 
+       <a href="../Destapa-Cañerias/Liquido-destapacaños-para-wc.html">Liquido destapacaños para wc </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
+       <a href="../Servicios/Como-destapar-el-inodoro-con-bicarbonato-de-sodio.html">Como destapar el inodoro con bicarbonato de sodio </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-De-Baños.html">Destapaciones De Baños </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañeria-Cocina.html">Destapar Cañeria Cocina </a> 
          </li>
 <!--EndPostsList-->
 
@@ -225,57 +225,57 @@ Destapar Cañerias
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/El-Mejor-Destapador-De-Cañerias-en-Palermo.html">El Mejor Destapador De Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Harpic-destop-instrucciones-de-uso.html">Harpic destop instrucciones de uso </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapador-De-Cantilde;erias-Electrico.html">Destapador De Cañerias Electrico </a> 
+       <a href="../Destapa-Cañerias/Tienes-alguna-idea-de-como-Destapar-cantilde;eria-con-bicarbonato-de-sodio.html">Tienes alguna idea de como Destapar cañeria con bicarbonato de sodio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-wc-con-soda-caustica.html">Como destapar un wc con soda caustica </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cañeria.html">Destapaciones De Cañeria </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapadora-Electrica.html">Destapadora Electrica </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De.html">Destapaciones De </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Cocina-mabe-4-quemadores.html">Cocina mabe 4 quemadores </a> 
+       <a href="../Destapa-Cañerias/Alcohol-boricado-para-que-sirve.html">Alcohol boricado para que sirve </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Sonda-destapacaños-pretul.html">Sonda destapacaños pretul </a> 
+       <a href="../Servicios/Aguafuerte-para-desatascar-tuberias.html">Aguafuerte para desatascar tuberias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Con-Que-Destapo-Una-Cantilde;eria.html">Con Que Destapo Una Cañeria </a> 
+       <a href="../Destapa-Cañerias/Plomero-para-destapar-cañerias.html">Plomero para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
+       <a href="../Destapa-Cañerias/Maquina-De-Destapar-Cloacas.html">Maquina De Destapar Cloacas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-truper-home-depot.html">Destapacaños truper home depot </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-liquido-para-inodoro.html">Destapacaños liquido para inodoro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-Cañeria-Con-Grasa-en-Palermo.html">Destapar Cañeria Con Grasa en Palermo </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-tapado-con-jabon.html">Como destapar un inodoro tapado con jabon </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones.html">Destapaciones </a> 
+       <a href="../Servicios/Bolsa-de-asar-mercadona.html">Bolsa de asar mercadona </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
