--- a/Destapa-Cañerias/Guia-destapacaños-pretul.html
+++ b/Destapa-Cañerias/Guia-destapacaños-pretul.html
@@ -138,27 +138,27 @@ Guia destapacaños pretul - Como destapar un inodoro tapado sin sopapa
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-miramar.html">Destapaciones de cloacas miramar </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas.html">Destapaciones De Cloacas </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapar-Cañeria-De-La-Cocina.html">Destapar Cañeria De La Cocina </a> 
+       <a href="../Servicios/Impacto-economico-de-la-plata.html">Impacto economico de la plata </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapadora-De-Cañerias-en-Palermo.html">Destapadora De Cañerias en Palermo </a> 
+       <a href="../Servicios/La-ville-de-boulogne-sur-mer.html">La ville de boulogne sur mer </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapar-Cañeria-Del-Baño.html">Destapar Cañeria Del Baño </a> 
+       <a href="../Servicios/Dans-quel-pays-est-bahia-bla.html">Dans quel pays est bahia bla </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/El-Mejor-Destapador-De-Cañerias-en-Palermo.html">El Mejor Destapador De Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-el-bantilde;o-con-un-gancho-de-ropa.html">Como destapar el baño con un gancho de ropa </a> 
          </li>
 <!--EndPostsList-->
 
@@ -221,57 +221,57 @@ Guia destapacaños pretul - Como destapar un inodoro tapado sin sopapa
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-oreja-con-mocos.html">Destapar oreja con mocos </a> 
+       <a href="../Servicios/Destapador-De-Inodoros.html">Destapador De Inodoros </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Area-de-observacion-de-urgencias.html">Area de observacion de urgencias </a> 
+       <a href="../Servicios/Aparato-Destapa-Cañerias-en-Palermo.html">Aparato Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Renta-de-destapacaños-home-depot.html">Renta de destapacaños home depot </a> 
+       <a href="../Destapa-Cañerias/Cual-es-la-causa-de-Limpiar-cantilde;erias-lavabo.html">Cual es la causa de Limpiar cañerias lavabo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/No-Puedo-Destapar-La-Cañeria-en-Palermo.html">No Puedo Destapar La Cañeria en Palermo </a> 
+       <a href="../Servicios/Destapaciones-Cañerias-en-Palermo.html">Destapaciones Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Alcohol-boricado-como-se-usa.html">Alcohol boricado como se usa </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-En.html">Destapaciones En </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapacaños-harpic-turbo.html">Destapacaños harpic turbo </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-pretul-precio.html">Destapacaños pretul precio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-la-cantilde;eria-de-la-pileta-de-la-cocina.html">Como destapar la cañeria de la pileta de la cocina </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-toilet.html">Como destapar un toilet </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapar-cañerias-casero-vinagre.html">Destapar cañerias casero vinagre </a> 
+       <a href="../Servicios/Como-blanquear-la-plata.html">Como blanquear la plata </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-mas-potente.html">Destapacaños mas potente </a> 
+       <a href="../Servicios/Bomba-destapacaños-manual.html">Bomba destapacaños manual </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destape-De-Desagues.html">Destape De Desagues </a> 
+       <a href="../Servicios/Remedio-casero-para-destapar-tuberias.html">Remedio casero para destapar tuberias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-wc-con-soda-caustica.html">Como destapar un wc con soda caustica </a> 
+       <a href="../Servicios/Bolsa-de-asar-mercadona.html">Bolsa de asar mercadona </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
