--- a/Destapa-Cañerias/Maquina-Destapa-Cantilde;erias-Electrica.html
+++ b/Destapa-Cañerias/Maquina-Destapa-Cantilde;erias-Electrica.html
@@ -143,27 +143,27 @@ Si est&aacute; utilizando un destapaca&ntilde;os disponible en el mercado, es po
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapar-Cañerias-en-Palermo.html">Destapar Cañerias en Palermo </a> 
+       <a href="../Servicios/Plomeria-Destapar-Cañerias-en-Palermo.html">Plomeria Destapar Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-tapado-con-jabon.html">Como destapar un inodoro tapado con jabon </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Empresa-De-Destape-De-Cañerias-en-Palermo.html">Empresa De Destape De Cañerias en Palermo </a> 
+       <a href="../Servicios/Productos-para-desatascar-tuberias.html">Productos para desatascar tuberias </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-Cerca-De-Mi.html">Destapaciones Cerca De Mi </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-el-inodoro-tapado-con-papel.html">Como destapar el inodoro tapado con papel </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Federal-Destapaciones.html">Federal Destapaciones </a> 
+       <a href="../Servicios/Destapaciones-de-cañerias-ituzaingo.html">Destapaciones de cañerias ituzaingo </a> 
          </li>
 <!--EndPostsList-->
 
@@ -226,57 +226,57 @@ Si est&aacute; utilizando un destapaca&ntilde;os disponible en el mercado, es po
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Empresas-Que-Destapen-Cañerias-en-Palermo.html">Empresas Que Destapen Cañerias en Palermo </a> 
+       <a href="../Servicios/Destapaciones-de-cañerias-ituzaingo.html">Destapaciones de cañerias ituzaingo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cañerias-palermo.html">Destapaciones de cañerias palermo </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas.html">Destapaciones De Cloacas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-Cañeria-Con-Grasa-en-Palermo.html">Destapar Cañeria Con Grasa en Palermo </a> 
+       <a href="../Servicios/Destapadora-De-Cañeria-en-Palermo.html">Destapadora De Cañeria en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-Cañerias-Inodoro.html">Destapa Cañerias Inodoro </a> 
+       <a href="../Servicios/Empresa-Destapa-Cañerias-en-Palermo.html">Empresa Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Como-se-puede-destapar-el-baño-sin-destapacaños.html">Como se puede destapar el baño sin destapacaños </a> 
+       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias.html">Remedios caseros para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Mejor-Destapa-Cañerias-en-Palermo.html">Mejor Destapa Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Como-remover-pelos-encravados.html">Como remover pelos encravados </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-En.html">Destapaciones En </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Guia-destapacaños-pretul.html">Guia destapacaños pretul </a> 
+       <a href="../Destapa-Cañerias/Destapador-de-cañerias-sodimac.html">Destapador de cañerias sodimac </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-hacer-para-destapar-el-inodoro-sin-sopapa.html">Como hacer para destapar el inodoro sin sopapa </a> 
+       <a href="../Servicios/Destapador-de-baño-liquido-walmart.html">Destapador de baño liquido walmart </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapador-De-Cantilde;erias-Electrico.html">Destapador De Cañerias Electrico </a> 
+       <a href="../Servicios/Resorte-Destapa-Cañerias-en-Palermo.html">Resorte Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacañerias-ayudin-opiniones.html">Destapacañerias ayudin opiniones </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-el-bantilde;o-con-bicarbonato.html">Como destapar el baño con bicarbonato </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
